--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -60,7 +60,8 @@
     "at":"at",
     "open":"turn on",
     "admin":"administrator",
-    "forcedOpen":"Force open"
+    "forcedOpen":"Force open",
+    "logout":"Logout"
 
 
 
