feat: :art: Add de laungue

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -1,71 +1,65 @@
 {
-    "lockerCurrentStatus": "The current status of the locker",
-    "operationRecord": "Operation record",
-    "systemName": "Member locker management system",
-    "opening": "open",
-    "closing": "close",
-    "using": "using",
-    "canUse": "be usable",
-    "error": "abnormal",
-    "locker": "locker",
-    "edit": "Edit information",
-    "forced": "Forced unlock",
-    "finishForced": "Forced unlocking completed",
-    "failedForced": "Forced unlock failed",
-    "forcedReason": "Reason for forced unlock",
-    "reminderContent": "Please enter reminder content",
-    "submit": "submit",
-    "cancel": "cancel",
-    "performForcedUnlocking": "Are you sure you want to perform forced unlocking?",
-    "confirm": "confirm",
-    "accountOrPasswordIncorrect": "Account or password incorrect",
-    "userName": "username",
-    "mail": "mail",
-    "identity": "identity",
-    "adminList": "Manager list",
-    "addAdmin": "Add a manager",
-    "addMemberInfo": "Add member information",
-    "mustEnorCh": "Must be in Chinese or English",
-    "cardNumberFormatDoesNotMatch": "Card number input format does not match",
-    "phoneNumberFormatDoesNotMatch": "Phone number input format does not match",
-    "emailFormatDoesNotMatch": "Email input format does not match",
-    "name": "name",
-    "cardId":"card number",
-    "phone":"phone",
-    "save":"save",
-    "locked":"locked",
-    "unlocked":"unlocked",
-    "account":"account",
-    "inputAccount":"Please enter your account",
-    "password":"password",
-    "inputPassword":"Please enter your password",
-    "logining":"logining",
-    "signInNow":"Sign in now",
-    "editPassword":"change Password",
-    "deleteUser":"delete user",
-    "success":"success",
-    "resetPassword":"reset password",
-    "inputNewPassword":"Please enter a new password",
-    "confirmNewPassword":"Confirm the new password again",
-    "fieldNotNull":"Field cannot be empty",
-    "comparePassword":"Inconsistent password input",
-    "sure":"sure you want",
-    "addSuccess":"added successfully",
-    "inputUserName":"Please enter a name",
-    "confirmPassword":"confirm password",
-    "inputConfirmPassword": "Please enter a confirm password",
-    "addFailed": "added failed",
-    "sureDeleteMember":"Are you sure you want to delete member profile?",
-    "deleted":"The member profile has been deleted",
-    "at":"at",
-    "open":"turn on",
-    "admin":"administrator",
-    "forcedOpen":"Force open",
-    "logout":"Logout"
-
-
-
-
-
-
+  "lockerCurrentStatus": "Current status of lockers",
+  "operationRecord": "Operation record",
+  "systemName": "Member locker management system",
+  "opening": "open",
+  "closing": "closing",
+  "using": "Using",
+  "canUse": "be usable",
+  "error": "abnormal",
+  "locker": "locker",
+  "edit": "Edit information",
+  "forced": "Forced unlock",
+  "finishForced": "Forced unlocking completed",
+  "failedForced": "Forced unlock failed",
+  "forcedReason": "Reason for forced unlock",
+  "reminderContent": "Please enter reminder content",
+  "submit": "submit",
+  "cancel": "cancel",
+  "performForcedUnlocking": "Are you sure you want to perform forced unlocking?",
+  "confirm": "confirm",
+  "accountOrPasswordIncorrect": "account or password incorrect",
+  "userName": "username",
+  "mail": "email",
+  "identity": "identity",
+  "adminList": "Manager list",
+  "addAdmin": "Add a manager",
+  "addMemberInfo": "Add member information",
+  "mustEnorCh": "Must be in Chinese or English",
+  "cardNumberFormatDoesNotMatch": "Card number input format does not match",
+  "phoneNumberFormatDoesNotMatch": "Phone number input format does not match",
+  "emailFormatDoesNotMatch": "Email input format does not match",
+  "name": "Name",
+  "cardId": "card number",
+  "phone": "Telephone",
+  "save": "save",
+  "locked": "locked",
+  "unlocked": "unlocked",
+  "account": "account",
+  "inputAccount": "Please enter your account",
+  "password": "password",
+  "inputPassword": "Please enter password",
+  "logining": "logging in",
+  "signInNow": "Sign in now",
+  "editPassword": "change Password",
+  "deleteUser": "delete user",
+  "success": "success",
+  "resetPassword": "reset Password",
+  "inputNewPassword": "Please enter a new password",
+  "confirmNewPassword": "Confirm the new password again",
+  "fieldNotNull": "Field cannot be empty",
+  "comparePassword": "Inconsistent password input",
+  "sure": "sure you want",
+  "addSuccess": "added successfully",
+  "inputUserName": "Please enter a name",
+  "confirmPassword": "confirm password",
+  "inputConfirmPassword": "Please enter a confirm password",
+  "addFailed": "added failed",
+  "sureDeleteMember": "Are you sure you want to delete member profile?",
+  "deleted": "The member profile has been deleted",
+  "at": "At",
+  "open": "turn on",
+  "admin": "administrator",
+  "forcedOpen": "Force open",
+  "logout": "Logout"
 }
