--- a/src/assets/locales/zh-tw/translation.json
+++ b/src/assets/locales/zh-tw/translation.json
@@ -2,8 +2,8 @@
   "lockerCurrentStatus": "置物櫃當前狀態",
   "operationRecord": "操作紀錄",
   "systemName": "會員置物櫃管理系統",
-  "opening": "開啟中",
-  "closing": "關閉中",
+  "unlocked": "已解鎖",
+  "locked": "已鎖上",
   "using": "使用中",
   "canUse": "可使用",
   "error": "異常",
@@ -23,7 +23,7 @@
   "mail": "電子信箱",
   "identity": "身分",
   "adminList": "管理者列表",
-  "addAdmin": "新增管理者",
+  "addAdmin": "添加管理員",
   "addMemberInfo": "新增會員資訊",
   "mustEnorCh": "必須為中文或英文",
   "cardNumberFormatDoesNotMatch": "卡號輸入格式不符",
@@ -33,8 +33,6 @@
   "cardId": "卡號",
   "phone": "電話",
   "save": "儲存",
-  "locked": "已鎖上",
-  "unlocked": "已解鎖",
   "account": "帳號",
   "inputAccount": "請輸入帳號",
   "password": "密碼",
@@ -57,9 +55,8 @@
   "addFailed": "新增失敗",
   "sureDeleteMember": "確定要執行刪除會員資料的動作嗎？",
   "deleted": "已刪除該會員資料",
-  "at": "於",
-  "open": "開啟",
+  "openAt": "於 {{time}} 解鎖",
   "admin": "管理員",
-  "forcedOpen": "強制開啟",
-  "logout": "登出"
+  "forcedOpenAt": "於 {{time}} 強制開鎖",
+  "SignOut": "登出"
 }
