update change language function

--- a/src/assets/locales/de/translation.json
+++ b/src/assets/locales/de/translation.json
@@ -5,7 +5,7 @@
   "unlocked": "entsperrt",
   "locked": "gesperrt",
   "using": "Verwenden",
-  "canUse": "verwendbar sein",
+  "canUse": "verfügbar",
   "error": "abnormal",
   "locker": "Schließfach",
   "edit": "Informationen bearbeiten",
