--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -5,7 +5,7 @@
   "unlocked": "open",
   "locked": "locked",
   "using": "Using",
-  "canUse": "be usable",
+  "canUse": "available",
   "error": "abnormal",
   "locker": "locker",
   "edit": "Edit information",
