refactor: Fix words in english

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -2,61 +2,61 @@
   "lockerCurrentStatus": "Current status of lockers",
   "operationRecord": "Operation record",
   "systemName": "Member locker management system",
-  "unlocked": "open",
-  "locked": "locked",
-  "using": "Using",
-  "canUse": "available",
-  "error": "abnormal",
-  "locker": "locker",
-  "edit": "Edit information",
-  "forced": "Forced unlock",
-  "finishForced": "Forced unlocking completed",
-  "failedForced": "Forced unlock failed",
-  "forcedReason": "Reason for forced unlock",
+  "unlocked": "Unlocked",
+  "locked": "Locked",
+  "using": "In Use",
+  "canUse": "Available",
+  "error": "Abnormal",
+  "locker": "Locker",
+  "edit": "Edit info",
+  "forced": "Force unlock",
+  "finishForced": "Forced unlocking success",
+  "failedForced": "Forced unlocking failed",
+  "forcedReason": "Reason for forced unlocking",
   "reminderContent": "Please enter reminder content",
-  "submit": "submit",
-  "cancel": "cancel",
-  "performForcedUnlocking": "Are you sure you want to perform forced unlocking?",
-  "confirm": "confirm",
-  "accountOrPasswordIncorrect": "account or password incorrect",
-  "userName": "username",
-  "mail": "email",
-  "identity": "identity",
+  "submit": "Submit",
+  "cancel": "Cancel",
+  "performForcedUnlocking": "Are you sure you want to perform force unlocking?",
+  "confirm": "Confirm",
+  "accountOrPasswordIncorrect": "Email or password incorrect",
+  "userName": "Username",
+  "mail": "Email",
+  "identity": "Identity",
   "adminList": "Manager list",
   "addAdmin": "Add a manager",
-  "addMemberInfo": "Add member information",
+  "addMemberInfo": "Add member info",
   "mustEnorCh": "Must be in Chinese or English",
-  "cardNumberFormatDoesNotMatch": "Card number input format does not match",
-  "phoneNumberFormatDoesNotMatch": "Phone number input format does not match",
-  "emailFormatDoesNotMatch": "Email input format does not match",
+  "cardNumberFormatDoesNotMatch": "Incorrect card number format",
+  "phoneNumberFormatDoesNotMatch": "Incorrect phone number format",
+  "emailFormatDoesNotMatch": "Incorrect Email format",
   "name": "Name",
-  "cardId": "card number",
-  "phone": "Telephone",
-  "save": "save",
-  "account": "account",
+  "cardId": "Card Number",
+  "phone": "Phone Number",
+  "save": "Save",
+  "account": "Email",
   "inputAccount": "Please enter your account",
-  "password": "password",
+  "password": "Password",
   "inputPassword": "Please enter password",
-  "logining": "logging in",
+  "logining": "Logging in",
   "signInNow": "Sign in now",
-  "editPassword": "change Password",
+  "editPassword": "Change Password",
   "deleteUser": "delete user",
-  "success": "success",
-  "resetPassword": "reset Password",
+  "success": "Success",
+  "resetPassword": "Reset Password",
   "inputNewPassword": "Please enter a new password",
   "confirmNewPassword": "Confirm the new password again",
   "fieldNotNull": "Field cannot be empty",
   "comparePassword": "Inconsistent password input",
-  "sure": "sure you want",
-  "addSuccess": "added successfully",
+  "sure": "Are uou sure you want to ",
+  "addSuccess": "Add success.",
   "inputUserName": "Please enter a name",
-  "confirmPassword": "confirm password",
+  "confirmPassword": "Password Confirmation",
   "inputConfirmPassword": "Please enter a confirm password",
-  "addFailed": "added failed",
-  "sureDeleteMember": "Are you sure you want to delete member profile?",
-  "deleted": "The member profile has been deleted",
-  "admin": "administrator",
+  "addFailed": "Add failed",
+  "sureDeleteMember": "Are you sure you want to delete this member info?",
+  "deleted": "The member info has been deleted",
+  "admin": "Manager",
   "openAt": "Unlocked at {{time}}",
-  "forcedOpenAt": "Force unlock at {{time}}",
+  "forcedOpenAt": "Force unlocked at {{time}}",
   "SignOut": "Sign out"
 }
