fix: Casing issue in de

--- a/src/assets/locales/de/translation.json
+++ b/src/assets/locales/de/translation.json
@@ -2,11 +2,11 @@
   "lockerCurrentStatus": "Aktueller Status der Schließfächer",
   "operationRecord": "Betriebsprotokoll",
   "systemName": "Schließfachverwaltungssystem für Mitglieder",
-  "unlocked": "entsperrt",
-  "locked": "gesperrt",
+  "unlocked": "Entsperrt",
+  "locked": "Gesperrt",
   "using": "Verwenden",
-  "canUse": "verfügbar",
-  "error": "abnormal",
+  "canUse": "Verfügbar",
+  "error": "Abnormal",
   "locker": "Schließfach",
   "edit": "Informationen bearbeiten",
   "forced": "Zwangsentriegelung",
@@ -14,10 +14,10 @@
   "failedForced": "Erzwungenes Entsperren fehlgeschlagen",
   "forcedReason": "Grund für die erzwungene Entsperrung",
   "reminderContent": "Bitte geben Sie den Erinnerungsinhalt ein",
-  "submit": "einreichen",
+  "submit": "Sinreichen",
   "cancel": "Absagen",
   "performForcedUnlocking": "Are you sure you want to perform forced unlocking?",
-  "confirm": "bestätigen",
+  "confirm": "Bestätigen",
   "accountOrPasswordIncorrect": "Konto oder Passwort falsch",
   "userName": "Nutzername",
   "mail": "Email",
@@ -33,7 +33,7 @@
   "cardId": "Kartennummer",
   "phone": "Telefon",
   "save": "Laden",
-  "account": "account",
+  "account": "Account",
   "inputAccount": "Please enter your account",
   "password": "Passwort",
   "inputPassword": "Bitte Passwort eingeben",
@@ -48,11 +48,11 @@
   "fieldNotNull": "Feld darf nicht leer sein",
   "comparePassword": "Inkonsistente Passworteingabe",
   "sure": "Sicher willst du",
-  "addSuccess": "erfolgreich hinzugefügt",
+  "addSuccess": "Erfolgreich hinzugefügt",
   "inputUserName": "Bitte geben Sie einen Namen ein",
-  "confirmPassword": "confirm password",
+  "confirmPassword": "Confirm password",
   "inputConfirmPassword": "Please enter a confirm password",
-  "addFailed": "added failed",
+  "addFailed": "Added failed",
   "sureDeleteMember": "Möchten Sie das Mitgliedsprofil wirklich löschen?",
   "deleted": "Das Mitgliedsprofil wurde gelöscht",
   "admin": "Administrator",
