fix: shorten add member button text for english

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -24,7 +24,7 @@
   "identity": "Identity",
   "adminList": "Manager list",
   "addAdmin": "Add a manager",
-  "addMemberInfo": "Add member info",
+  "addMemberInfo": "Add member",
   "mustEnorCh": "Must be in Chinese or English",
   "cardNumberFormatDoesNotMatch": "Incorrect card number format",
   "phoneNumberFormatDoesNotMatch": "Incorrect phone number format",
