--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -58,5 +58,7 @@
   "admin": "Manager",
   "openAt": "Unlocked at {{time}}",
   "forcedOpenAt": "Force unlocked at {{time}}",
-  "SignOut": "Sign out"
+  "SignOut": "Sign out",
+  "bindExistingMembers": "Bind existing members"
+
 }
