--- a/src/assets/locales/de/translation.json
+++ b/src/assets/locales/de/translation.json
@@ -77,5 +77,7 @@
     },
     "manual": "Handbuch",
     "sync_now": "jetzt synchronisieren"
-  }
+  },
+  "bindingFunctionFirst": "Bitte verwenden Sie zuerst die Bindungsfunktion",
+  "addMemberInfoBySelf": "Mitgliederinformationen selbst hinzufügen"
 }
