--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -77,5 +77,7 @@
     },
     "manual": "Manual",
     "sync_now": "Sync Now"
-  }
+  },
+  "addMemberInfoBySelf": "add member info self",
+  "bindingFunctionFirst": "please use binding function first "
 }
