修改選項按鈕能夠儲存多個點擊狀態+css調整

--- a/src/assets/locales/zh-tw/translation.json
+++ b/src/assets/locales/zh-tw/translation.json
@@ -17,7 +17,7 @@
   "cause_click":"請點擊下方選擇原因",
   "memberCheck":"會員到期檢查",
   "deviceTest":"設備測試",
-  "forgot card":"會員忘記帶卡",
+  "forgotCard":"會員忘記帶卡",
   "submit": "提交",
   "cancel": "取消",
   "performForcedUnlocking": "確定要執行強制開鎖的動作嗎？",
