翻譯英文介面

--- a/src/assets/locales/en/translation.json
+++ b/src/assets/locales/en/translation.json
@@ -14,6 +14,10 @@
   "failedForced": "Forced unlocking failed",
   "forcedReason": "Reason for forced unlocking",
   "reminderContent": "Please enter reminder content",
+  "causeClick":"Please click below to select a reason or enter your own",
+  "memberCheck":"Member expiration check",
+  "deviceTest":"Device test",
+  "forgotCard":"Member forgets to bring card",
   "submit": "Submit",
   "cancel": "Cancel",
   "performForcedUnlocking": "Are you sure you want to perform force unlocking?",
